--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "docker": "docker-compose build && docker-compose up --watch"
   },
   "dependencies": {
     "@supabase/ssr": "^0.5.2",
