--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,18 @@
-version: "3.8"
 services:
+  db:
+    image: postgres:15-alpine
+    container_name: postgres-dev
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    env_file:
+      - .env
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
   app:
     build:
       context: .
@@ -9,6 +22,7 @@ services:
     env_file:
       - .env
     environment:
+      - POSTGRES_HOST=postgres-dev
       - NODE_ENV
       - NEXT_PUBLIC_SUPABASE_URL
       - NEXT_PUBLIC_SUPABASE_ANON_KEY
@@ -22,3 +36,6 @@ services:
             - node_module/
         - action: rebuild
           path: package.json
+
+volumes:
+  postgres_data:
